--- a/shulu/public/css/base.css
+++ b/shulu/public/css/base.css
@@ -1,25 +1,55 @@
 *{
-	background:rgba(0,0,0,0.05);
+    -webkit-box-sizing:border-box;
+    -moz-box-sizing:border-box;
+    box-sizing:border-box;
+}
+body
+{
+    background:#eee;
+    line-height:1.2;
+}
+h1
+{
+    margin-top:0px;
+    font-size:20px;
 }
 
-
+.home h1 {
+    color:#666;
+    font-size:16px;
+}
+input
+{
+    width:100%;
+    padding:5px;
+    border:1px solid rgba(0,0,0,0.1);
+    -webkit-border-radius:3px;
+    -moz-border-radius:3px;
+    border-radius:3px;
+}
+a
+{
+    text-decoration:none;
+    color:#fff;
+}
 .fl{
-	float:left;
+    float:left;
 }
+
 
 .fr{
-	float:right;
+    float:right;
 }
 
 .clearfix:after,
 .clearfix:before{
-	content:"";
-	display:table;
-	clear:both;
+    content:"";
+    display:table;
+    clear:both;
 }
 
 .navbar{
-       	background:rgba(0,0,0,0.1);
+       	background:#f00;
 }
 
 .navbar-item{
@@ -53,100 +83,60 @@
 	cursor:pointer;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+form,label{
+    display:block;
+}
+
+.page
+{
+    margin:10px;
+    padding:10px;
+}
+.card
+{
+    border-radius:4px;
+    display:block;
+    padding:10px 6px;
+    box-shadow:0 1px 2px 2px rgba(0,0,0,0.1);
+    background:#fff;
+}
+.container
+{
+    width:600px;
+    margin-left:auto;
+    margin-right:auto;
+}
+.container.signup,
+.container.login,
+.container.reset-password
+{
+    width:400px;
+}
+.container.home{
+    background:#fff;
+    padding:10px 10px;
+}
+.home h1
+{
+    color:#666;
+    font-size:16px;
+}
+.home .item-content .title{
+    font-size:20px;
+    color:#5c64c7;
+}
+.content-act{
+    font-size:14px;
+    color:#aaa;
+}
+.hr
+{
+    display:block;
+    width:100%;
+    height:1px;
+    background:#eee;
+    margin:15px auto;
+}
 
 
 
