--- a/shulu/public/css/base.css
+++ b/shulu/public/css/base.css
@@ -106,6 +106,7 @@ form,label{
     margin-left:auto;
     margin-right:auto;
 }
+.container.home,
 .container.signup,
 .container.login,
 .container.reset-password,
